logs/finenight.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/finenight'...
Compiling './lib/python3.5/site-packages/finenight/et.py'...
***   File "./lib/python3.5/site-packages/finenight/et.py", line 74
    for (qj,a) in map(lambda (a,s): (s,a), qi.transitions.items()):
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finenight/fsaTest.py'...
***   File "./lib/python3.5/site-packages/finenight/fsaTest.py", line 333
    except StateError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finenight/fsaTest2.py'...
***   File "./lib/python3.5/site-packages/finenight/fsaTest2.py", line 11
    print dfa
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/finenight/iadfa.py'...
***   File "./lib/python3.5/site-packages/finenight/iadfa.py", line 83
    print stateName, state
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/finenight/recognize.py'...
***   File "./lib/python3.5/site-packages/finenight/recognize.py", line 35
    print """Usage: recognize [OPTION]... [word] ...
    
If a "word" argument is given, it check if its a valid word,
and if not, it gives suggestions.

If the iadfa file is not given it will generate one with the
data/test.dico.

Mandatory arguments to long options are mandatory for short options too.
-d, --dico-file=FILE            this is the dictionnary file that will
                                be used to generate the IADFA. 
-e, --export=FILE               export the IADFA to a graphviz file.
-i, --iadfa=FILE                Use this file for the IADFA. If you
                                specify the '-d' or '--dico' option,
                                this is where the IADFA will be stored.
-n, --distance=n                this is the levenshtein distance. [default=1]
-o, --oflazer                   use the [oflazer96errortolerant] algorithm,
                                instead of the [schulz02fast] faster algorithm.
-t, --transitions-file=FILE     the file that contain/will contain the OFlazer
                                transitions. (only works if you specified that
                                you want to use OFlazer algorithm.
-v, --verbose                   verbose mode. It causes the program to print
                                debugging messages about its progress.
"""
                                                    
    
                                                            
                                 

                                                            
               

                                                                        
                                                                      
                                                               
                                                                    
                                                                   
                                                                    
                                                                       
                                                                             
                                                                           
                                                                               
                                                                              
                                                                              
                                                                  
                                                                            
                                                                      
  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/finenight/test.py'...
***   File "./lib/python3.5/site-packages/finenight/test.py", line 7
    def getRightNonSubsumingPositions(n, (i, e), basePos):
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/finenight-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
